# template-generator

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  index.html  script.js  settings.gradle.kts  templateer.js  templateer_bg.wasm  version_index.json
.github/workflows/: build.yml  build_native.yml  build_web.yml
docs/: CNAME  style.css  templateer_bg.wasm  version_index.json
docs/templates/forge_only/src/main/resources/: MOD_ID.mixins.json
docs/templates/multiplatform/common/: build.gradle
docs/templates/neoforge_only/src/main/java/PACKAGE_DIR/: ExampleMod.java
res/: index.html  script.js  style.css
src/: async_support.rs  class_names.rs  cli.rs  game_versions.rs  lib.rs  main.rs  maven.rs  minecraft_versions.json  mod_ids.rs  requests.rs  result.rs  tap.rs  versions.rs  web.rs  xml.rs
src/app/: generator.rs  mod.rs  versions.rs
src/app2/: app.rs  focus.rs  mod.rs  screen.rs  widget.rs
src/cli/: mod.rs
src/filer/: mod.rs  native.rs  web.rs
src/templates/: mod.rs
src/templates/engine/: filer.rs  mod.rs
src/templates/fabric/: build.gradle  mod.rs
src/templates/fabric/src/main/java/PACKAGE_DIR/fabric/: ExampleModFabric.java
src/templates/fabric/src/main/java/PACKAGE_DIR/fabric/client/: ExampleModFabricClient.java
src/templates/fabric/src/main/resources/: fabric.mod.json
src/templates/fabric_like/: build.gradle  mod.rs
src/templates/fabric_like/src/main/java/PACKAGE_DIR/fabriclike/: ExampleModFabricLike.java
src/templates/forge/: build.gradle  mod.rs
src/templates/forge/src/main/java/PACKAGE_DIR/forge/: ExampleModForge.java
src/templates/forge/src/main/resources/: pack.mcmeta
src/templates/forge_only/: build.gradle  mod.rs
src/templates/forge_only/src/main/java/PACKAGE_DIR/: ExampleMod.java
src/templates/forge_only/src/main/resources/: pack.mcmeta
src/templates/multiplatform/: build.gradle  gradle.properties  mod.rs  settings.gradle
src/templates/multiplatform/common/: build.gradle
src/templates/multiplatform/common/src/main/java/PACKAGE_DIR/: ExampleMod.java
src/templates/neoforge/: build.gradle  mod.rs
src/templates/neoforge/src/main/java/PACKAGE_DIR/neoforge/: ExampleModNeoForge.java
src/templates/neoforge_only/: gradle.properties  mod.rs
src/templates/neoforge_only/src/main/java/PACKAGE_DIR/: ExampleMod.java
src/templates/quilt/: build.gradle  mod.rs
src/templates/quilt/src/main/java/PACKAGE_DIR/quilt/: ExampleModQuilt.java
src/templates/quilt/src/main/resources/: quilt.mod.json
src/templates/shared/: mod.rs
src/versions/: index.rs  maven.rs  version_metadata.rs  web.rs  xml.rs
templates/fabric/: build.gradle
templates/fabric/src/main/java/PACKAGE_DIR/fabric/: ExampleModFabric.java
templates/fabric/src/main/java/PACKAGE_DIR/fabric/client/: ExampleModFabricClient.java
templates/fabric_like/: build.gradle
templates/fabric_like/src/main/java/PACKAGE_DIR/fabriclike/: ExampleModFabricLike.java
templates/forge/: build.gradle
templates/forge/src/main/resources/: pack.mcmeta
templates/forge_only/: build.gradle  gradle.properties  settings.gradle
templates/forge_only/src/main/java/PACKAGE_DIR/: ExampleMod.java
templates/multiplatform/: build.gradle  gradle.properties
templates/neoforge/: build.gradle
templates/neoforge/src/main/java/PACKAGE_DIR/neoforge/: ExampleModNeoForge.java
templates/neoforge_only/: build.gradle  gradle.properties
templates/quilt/: build.gradle
templates/quilt/src/main/java/PACKAGE_DIR/quilt/: ExampleModQuilt.java
test/: index.html  script.js  server.py
version_resolver/: Cargo.toml
version_resolver/src/: index.rs  lib.rs  main.rs  maven.rs  minecraft.rs  version_metadata.rs  web.rs  xml.rs
version_resolver_cli/: Cargo.toml
version_resolver_cli/src/: main.rs
