[package]
name = "templateer"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["version_resolver"]

[workspace.dependencies]
miette = "5.10"
reqwest = "0.11"
xml_dom = "0.2.6"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.25", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[workspace.dependencies.web-sys]
version = "0.3.64"
features = [
    "Document",
    "DomParser",
    "Element",
    "HtmlCollection",
    "Node",
    "NodeList",
    "Response",
    "SupportedType",
    "Window",
    "console",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
miette = { workspace = true }
reqwest = { workspace = true }
futures = "0.3"
rfd = "0.12"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
version_resolver = { path = "version_resolver" }
bytes = "1.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
miette = { workspace = true, features = ["fancy"] }
tokio = { workspace = true }
ratatui = "0.23.0"
crossterm = "0.27.0"
tui-textarea = { version = "0.2.2", default-features = false, features = ["ratatui-crossterm"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
serde-wasm-bindgen = "0.4"
