[package]
name = "templateer"
version.workspace = true
edition = "2021"
autobins = false

[workspace]
members = [
    "version_resolver_cli"
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
reqwest = "0.12"
xml_dom = "0.2.6"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rfd = "0.14"
cliclack = "0.3.2"
clap = { version = "4.5", features = ["derive"] }
flexver-rs = "0.1.2"

[workspace.dependencies.web-sys]
version = "0.3.64"
features = [
    "Document",
    "DomParser",
    "Element",
    "HtmlCollection",
    "Node",
    "NodeList",
    "Response",
    "SupportedType",
    "Window",
    "console",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "architectury-template-generator"
path = "src/main.rs"

[dependencies]
reqwest = { workspace = true }
futures = "0.3"
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
bytes = "1.6"
flexver-rs = { workspace = true }
xml_dom = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true }
cliclack = { workspace = true }
clap = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
serde-wasm-bindgen = "0.6"
rfd = { workspace = true }
