[package]
name = "version_resolver"
version = "1.0.0"
edition = "2021"

[dependencies]
eyre = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
xml_dom = { workspace = true }
flexver-rs = "0.1.2"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
clap = { workspace = true }
tokio = { workspace = true }
xml_dom = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
